# AIE8

./: .pre-commit-config.yaml  pyproject.toml  test_openai_api.py  test_rag.ipynb
01_Prototyping Best Practices & Vibe Check/: README.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: text_utils.py  vectordatabase.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  Ollama_Setup_and_Testing.ipynb  pyproject.toml
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  dataset.csv  testset.csv
08_Evaluating_RAG_With_Ragas/: Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  README.md  Semantic_Chunking_RAG_Evaluation.ipynb  evaluation_dataset_AB.csv  pyproject.toml  test_data_RAG_nb1.csv
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  README.md  USAGE.md  pyproject.toml  test_langsmith.ipynb  testset.csv
09_Advanced_Retrieval/data/: cleaned_Projects_with_Domains.csv
10_Open_DeepResearch/: open-deep-research.ipynb
14_LangGraph_Platform/: LOOM_TRANSCRIPT.md  README.md
15_A2A_LangGraph/: README.md  activity_1_langgraph_a2a_client.ipynb  pyproject.toml
16_Production_RAG_and_Guardrails/: Activity_3_Guardrails_Integration.ipynb  Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb
(+218 files in other folders)
