[project]
name = "aie8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.106.1",
    "pip>=25.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",           # Fast linter (replaces pylint)
    "black>=23.0.0",         # Code formatter
    "isort>=5.12.0",         # Import sorter
]

# Ruff configuration (updated format)
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["aie8"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py312']

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
]
